--- a/introduce.html
+++ b/introduce.html
@@ -19,7 +19,7 @@
                     <i class="icon-ok green"></i>
                     欢迎使用
                     <strong class="blue">
-                        PM项目管理系统
+                        项目管理系统
                     </strong>
                     ,以下为个人博客项目的基本情况简介.	
                 </div>
@@ -125,12 +125,10 @@
                                         <div class="widget-main">
                                             <dl id="dt-list-1">
                                                 <dt>1、用户模块</dt>
-                                                <dd>包含用户登录、注册、用户资料等功能。</dd>
-                                                <dd>1）包含用户登录；/dd>
+                                                <dd>1）包含用户登录；</dd>
                                                 <dd>2）用户注册；</dd>
                                                 <dd>3）个人信息查看与修改；</dd>
                                                 <dt>2、文章模块</dt>
-                                                <dd>系统消息推送通知。</dd>
                                                 <dd>1）发表文章；</dd>
                                                 <dd>2）文章浏览；</dd>
                                                 <dd>3）发表评论；</dd>
