--- a/log.html
+++ b/log.html
@@ -39,8 +39,8 @@
 														<div class="widget-box transparent">
 															<div class="widget-header widget-header-small">
 																<h5 class="smaller">
-																	<a href="#" class="blue">王五</a>
-																	<span class="grey">提交了任务B</span>
+																	<a href="#" class="blue">安迪</a>
+																	<span class="grey">提交了用户注册页面效果设计</span>
 																</h5>
 																<span class="widget-toolbar no-border">
 																	<i class="icon-time bigger-110"></i>
@@ -49,7 +49,7 @@
 															</div>
 															<div class="widget-body">
 																<div class="widget-main">
-																	完成登录页面设计
+																	完成用户注册页面的界面设计图
 																</div>
 															</div>
 														</div>
@@ -148,18 +148,6 @@
 																	<div class="clearfix">
 																		<div class="pull-left">
                                                                             任务已提交，大致的图片效果
-																		</div>
-
-																		<div class="pull-right">
-																			<i class="icon-chevron-left blue bigger-110"></i>
-
-																			&nbsp;
-																			<img width="36" src="resources/assets/images/gallery/thumb-4.jpg" />
-																			<img width="36" src="resources/assets/images/gallery/thumb-3.jpg" />
-																			<img width="36" src="resources/assets/images/gallery/thumb-2.jpg" />
-																			<img width="36" src="resources/assets/images/gallery/thumb-1.jpg" />
-																			&nbsp;
-																			<i class="icon-chevron-right blue bigger-110"></i>
 																		</div>
 																	</div>
 																</div>
