--- a/login.html
+++ b/login.html
@@ -3,12 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>PM项目登录</title>
-		<link rel="stylesheet" href="resources/assets/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="resources/assets/font-awesome/4.2.0/css/font-awesome.min.css" />>
+		<link rel="stylesheet" href="resources/assets/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="resources/assets/font-awesome/4.2.0/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="resources/assets/fonts/fonts.googleapis.com.css" />
 		<link rel="stylesheet" href="resources/assets/css/ace.min.css" />
 		<link rel="stylesheet" href="resources/assets/css/ace-rtl.min.css" />
         <script src="resources/assets/js/jquery.2.1.1.min.js"></script>
+		<script type="text/javascript">
+			function login(){
+				window.location.href="index.html";
+			}
+		</script>
 	</head>
 
 	<body class="login-layout">
@@ -20,14 +25,14 @@
 							<div class="center">
 								<h1>
 									<i class="icon-leaf green"></i>
-									<span class="red">PM项目管理系统</span>
+									<span class="red">个人博客项目管理系统</span>
 								</h1>
 							</div>
 
 							<div class="space-6"></div>
 
 							<div class="position-relative">
-								<div id="login-box" class="login-box visible widget-box no-border">
+								<div id="login-div" class="login-box visible widget-box no-border">
 									<div class="widget-body">
 										<div class="widget-main">
 											<h4 class="header blue lighter bigger">
@@ -35,34 +40,34 @@
 												用户登录
 											</h4>
                                             <!--下划线-->
-											<div class="space-6"></div>
 											<form>
 												<fieldset>
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input id="username" type="text" class="form-control" placeholder="用户名" />
+															用户名<input id="username" type="text" class="form-control"/>
 															<i class="icon-user"></i>
 														</span>
 													</label>
 
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input id="password" type="password" class="form-control" placeholder="密码" />
+															密码<input id="password" type="password" class="form-control"/>
 															<i class="icon-lock"></i>
 														</span>
 													</label>
-
-													<div class="space"></div>
 
 													<div class="clearfix">
 														<label class="inline">
 															<input type="checkbox" class="ace" />
 															<span class="lbl">记住我</span>
 														</label>
-
-														<button id="login" type="button" class="width-35 pull-right btn btn-sm btn-primary">
+														<button onclick="login()" type="button" class="width-25 pull-right btn btn-sm btn-primary">
 															<i class="icon-key"></i>
 															登录
+														</button>
+														<button type="button" style="margin-right: 10px;" class="width-25 pull-right btn btn-sm btn-primary">
+															<i class="icon-key"></i>
+															注册
 														</button>
 													</div>
 
@@ -73,23 +78,15 @@
 
 										<div class="toolbar clearfix">
 											<div>
-												<a href="#" onclick="show_box('forgot-box'); return false;" class="forgot-password-link">
-													<i class="icon-arrow-left"></i>
+												<a class="forgot-password-link">
 													忘记密码？
-												</a>
-											</div>
-
-											<div>
-												<a href="#" onclick="show_box('signup-box'); return false;" class="user-signup-link">
-													还没账号？注册>>
-													<i class="icon-arrow-right"></i>
 												</a>
 											</div>
 										</div>
 									</div>
 								</div>
 
-								<div id="forgot-box" class="forgot-box widget-box no-border">
+								<div id="forgot" class="forgot-box  no-border">
 									<div class="widget-body">
 										<div class="widget-main">
 											<h4 class="header red lighter bigger">
@@ -98,15 +95,13 @@
 											</h4>
 
 											<div class="space-6"></div>
-											<p>
-												请输入注册邮箱
-											</p>
+											<p>请输入注册邮箱</p>
 
 											<form>
 												<fieldset>
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="email" class="form-control" placeholder="Email" />
+															<input type="email" class="form-control"/>
 															<i class="icon-envelope"></i>
 														</span>
 													</label>
@@ -122,85 +117,7 @@
 										</div>
 
 										<div class="toolbar center">
-											<a href="#" onclick="show_box('login-box'); return false;" class="back-to-login-link">
-												返回登录
-												<i class="icon-arrow-right"></i>
-											</a>
-										</div>
-									</div>
-								</div>
-
-								<div id="signup-box" class="signup-box widget-box no-border">
-									<div class="widget-body">
-										<div class="widget-main">
-											<h4 class="header green lighter bigger">
-												<i class="icon-group blue"></i>
-												新用户注册
-											</h4>
-
-											<div class="space-6"></div>
-											<p> 请输入注册信息 </p>
-
-											<form>
-												<fieldset>
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="email" class="form-control" placeholder="Email" />
-															<i class="icon-envelope"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="用户名" />
-															<i class="icon-user"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control" placeholder="密码" />
-															<i class="icon-lock"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control" placeholder="重复密码" />
-															<i class="icon-retweet"></i>
-														</span>
-													</label>
-
-													<label class="block">
-														<input type="checkbox" class="ace" />
-														<span class="lbl">
-															我接受
-															<a href="#">用户协议</a>
-														</span>
-													</label>
-
-													<div class="space-24"></div>
-
-													<div class="clearfix">
-														<button type="reset" class="width-30 pull-left btn btn-sm">
-															<i class="icon-refresh"></i>
-															重置
-														</button>
-
-														<button type="button" class="width-65 pull-right btn btn-sm btn-success">
-															注册
-															<i class="icon-arrow-right icon-on-right"></i>
-														</button>
-													</div>
-												</fieldset>
-											</form>
-										</div>
-
-										<div class="toolbar center">
-											<a href="#" onclick="show_box('login-box'); return false;" class="back-to-login-link">
-												<i class="icon-arrow-left"></i>
-												返回登录
-											</a>
+											<a>返回登录</a>
 										</div>
 									</div>
 								</div>
@@ -210,19 +127,5 @@
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript">
-            $('#login').click(function(){
-                var username = $('#username').val();
-                var password = $('#password').val();
-                if(username=='swan' && password=='123456'){//验证登录
-                    window.location.href='index.html';
-                }
-            });
-            
-			function show_box(id) {
-			    $('.widget-box.visible').removeClass('visible');
-			    $('#'+id).addClass('visible');
-			}
-		</script>
 </body>
 </html>
