--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
 														<a href="#" class="user-title-label dropdown-toggle" data-toggle="dropdown">
 															<i class="icon-circle light-green middle"></i>
 															&nbsp;
-															<span class="white">Rex</span>
+															<span class="white">张三</span>
 														</a>
 													</div>
 												</div>
@@ -45,6 +45,7 @@
 											<div class="profile-contact-info">
 												<div class="profile-contact-links align-left">
 													<strong class="blue">个人简介</strong>
+													<span>主要负责项目的需求管理</span>
 												</div>
 											</div>
 										</div>
@@ -68,21 +69,21 @@
 													<span class="line-height-1 bigger-170"> 4 </span>
 
 													<br />
-													<span class="line-height-1 smaller-90"> 项目数 </span>
+													<span class="line-height-1 smaller-90">项目数 </span>
 												</span>
 
 												<span class="btn btn-app btn-sm btn-grey no-hover">
 													<span class="line-height-1 bigger-170"> 23 </span>
 
 													<br />
-													<span class="line-height-1 smaller-90"> 工作周数 </span>
+													<span class="line-height-1 smaller-90">工作周数</span>
 												</span>
 
 												<span class="btn btn-app btn-sm btn-success no-hover">
-													<span class="line-height-1 bigger-170"> 5 </span>
+													<span class="line-height-1 bigger-170">5</span>
 
 													<br />
-													<span class="line-height-1 smaller-90"> 职位等级 </span>
+													<span class="line-height-1 smaller-90">职位等级</span>
 												</span>
 											</div>
 
@@ -93,7 +94,7 @@
 													<div class="profile-info-name"> 姓名 </div>
 
 													<div class="profile-info-value">
-														<span class="editable">Rex</span>
+														<span class="editable">张三</span>
 													</div>
 												</div>
                                                 <div class="profile-info-row">
@@ -128,10 +129,10 @@
 												</div>
 
 												<div class="profile-info-row">
-													<div class="profile-info-name"> 在线 </div>
+													<div class="profile-info-name"> 最近在线 </div>
 
 													<div class="profile-info-value">
-														<span class="editable">3 小时之前</span>
+														<span class="editable">2016-05-01 22:00</span>
 													</div>
 												</div>
                                                 <div class="profile-info-row">
@@ -160,11 +161,11 @@
 															<div class="profile-activity clearfix">
 																<div>
 																	<img class="pull-left" src="resources/assets/avatars/avatar5.png" />
-																	<a class="user" href="#"> Rex </a>
-																	提交了任务A
+																	<a class="user" href="#"> 安迪 </a>
+																	完成用户注册页面的界面设计图
 																	<div class="time">
 																		<i class="icon-time bigger-110"></i>
-																		2 小时之前
+																		2016-04-30 15:30
 																	</div>
 																</div>
 															</div>
@@ -172,12 +173,11 @@
 															<div class="profile-activity clearfix">
 																<div>
 																	<img class="pull-left" src="resources/assets/avatars/avatar1.png" />
-																	<a class="user" href="#"> 李四 </a>
-
-																	审核了任务A
+																	<a class="user" href="#"> 张三 </a>
+																	新建了个人信息查看与修改功能
 																	<div class="time">
 																		<i class="icon-time bigger-110"></i>
-																		1 小时之前
+																		2016-04-30 10:30
 																	</div>
 																</div>
 															</div>
