--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										</li>
 										<li>
 											<a class="clearfix">
-												<img src="resources/assets/avatars/avatar4.png" class="msg-photo" />
+												<img src="resources/assets/avatars/avatar9.png" class="msg-photo" />
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">安迪:</span>
@@ -120,9 +120,9 @@
 
 						<li class="light-blue">
 							<a onclick="showUser()" data-toggle="dropdown" class="dropdown-toggle" style="cursor:pointer;">
-								<img class="nav-user-photo" src="resources/assets/avatars/user.jpg"/>
+								<img class="nav-user-photo" src="resources/assets/avatars/avatar6.png"/>
 								<span class="user-info">
-									<small>欢迎,</small>张三
+									<small>欢迎,</small>李四
 								</span>
 								<i class="ace-icon fa fa-caret-down"></i>
 							</a>
