--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 										<div class="col-xs-12 col-sm-3 center">
 											<div>
 												<span class="profile-picture">
-													<img id="avatar" class="editable img-responsive" src="resources/assets/avatars/profile-pic.jpg" />
+													<img id="avatar" class="editable img-responsive" src="resources/assets/avatars/profile-pic.png" />
 												</span>
 
 												<div class="space-4"></div>
@@ -34,7 +34,7 @@
 														<a href="#" class="user-title-label dropdown-toggle" data-toggle="dropdown">
 															<i class="icon-circle light-green middle"></i>
 															&nbsp;
-															<span class="white">张三</span>
+															<span class="white">李四</span>
 														</a>
 													</div>
 												</div>
@@ -94,14 +94,14 @@
 													<div class="profile-info-name"> 姓名 </div>
 
 													<div class="profile-info-value">
-														<span class="editable">张三</span>
+														<span class="editable">李四</span>
 													</div>
 												</div>
                                                 <div class="profile-info-row">
 													<div class="profile-info-name"> 性别 </div>
 
 													<div class="profile-info-value">
-														<span class="editable">男</span>
+														<span class="editable">女</span>
 													</div>
 												</div>
 												<div class="profile-info-row">
@@ -160,7 +160,7 @@
 														<div id="profile-feed-1" class="profile-feed">
 															<div class="profile-activity clearfix">
 																<div>
-																	<img class="pull-left" src="resources/assets/avatars/avatar5.png" />
+																	<img class="pull-left" src="resources/assets/avatars/avatar9.png" />
 																	<a class="user" href="#"> 安迪 </a>
 																	完成用户注册页面的界面设计图
 																	<div class="time">
@@ -172,7 +172,7 @@
 
 															<div class="profile-activity clearfix">
 																<div>
-																	<img class="pull-left" src="resources/assets/avatars/avatar1.png" />
+																	<img class="pull-left" src="resources/assets/avatars/avatar3.png" />
 																	<a class="user" href="#"> 张三 </a>
 																	新建了个人信息查看与修改功能
 																	<div class="time">
